<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation"> <!--TODO remove ignore missing translations-->
    <string name="app_name">Libre Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="domoticz">Domoticz</string>
    <string name="host">Host</string>
    <string name="sorting_switches">Sorting switches</string>
    <string name="experimental">Experimental features</string>
    <string name="enable_experimental">Enable experimental features</string>
    <string name="music_updates_per_second">Music switch updates per second</string>
    <string name="domoticz_password">Domoticz password</string>
    <string name="ssh_username">SSH username</string>
    <string name="ssh_password">SSH password</string>
    <string name="restart_confirmation">Do you really want to restart RPi?</string>
    <string name="restart">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="restart_rpi">Restart Raspberry PI</string>
    <string name="check_ssh_connection">Check SSH connection</string>
    <string name="favorite_switches">Favorite switches:</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="done">Done</string>
    <string name="new_group">New Group</string>
    <string name="field_required">This field is required!</string>
    <string name="title_home">Libre Home</string>
    <string name="about_url">https://librehome.sroga.dev</string>
    <string name="refresh">Refresh</string>
    <string name="title_switches">Switches</string>
    <string name="title_groups">Groups</string>
    <string name="delete_group">Delete group</string>
    <string name="edit_group">Edit group</string>
    <string name="default_host">domoticz</string>
    <string name="default_ssh_username">pi</string>
    <string name="domoticz_username">Domoticz username</string>
    <string name="sort_alpha">Sort alphabetically</string>
    <string name="sort_domoticz">Use domoticz sorting</string>
    <string name="sort_enabled">Enabled first</string>
    <string name="sort_recent">Most recently used</string>
    <string name="action_logs">Logs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_log">Send</string>
    <string name="copy_log">Copy</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="no_logs_yet">No logs yet!</string>
    <string name="show_unsupported">Show unsupported devices</string>
    <string name="unsupported_device">Unsupported device. Type: </string>
    <string name="scenes">Scenes:</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected!</string>
    <string name="connection_failed">Connection failed</string>
    <string name="reboot_success">Reboot successful</string>
    <string name="sending_command">Sending command…</string>
    <string name="awaiting_response">Awaiting response…</string>
    <string name="add_fav">"Switch %1$s is added to favorites!"</string>
    <string name="conn_err">"Connection error: "</string>
    <string name="log_copy">Copied log to clipboard!</string>
    <string name="img_err">You have to select an image!</string>
    <string name="send_email">Send this email to me.</string>
    <string name="title_sensors">Sensors</string>
    <string name="last_update_time">Last update time</string>
    <string name="show_addinfo">Show additional device information</string>
    <string name="groups">Local groups:</string>
</resources>
