<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

    <item
            android:id="@+id/navigation_switches"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/title_switches" />

    <item
            android:id="@+id/navigation_sensors"
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:title="@string/title_sensors" />

    <item
            android:id="@+id/navigation_groups"
            android:icon="@drawable/ic_view_comfy_black_24dp"
            android:title="@string/title_groups" />

</menu>
