<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_refresh_white_24dp"
            android:orderInCategory="50"
            android:title="@string/refresh"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_about"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_logs"
            android:icon="@drawable/ic_warning_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_logs"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_tune_white_24dp"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="ifRoom" />

</menu>
