<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.activities.NewGroupActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/new_group_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:adjustViewBounds="true"
                android:src="@drawable/plus_in_circle" />

        <EditText
                android:id="@+id/edit_group_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:hint="@string/group_name"
                android:textSize="20sp" />

    </LinearLayout>

    <EditText
            android:id="@+id/edit_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_description"
            android:lines="4" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/switches_check_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="4dp"
            tools:itemCount="8"
            tools:listitem="@layout/switch_check_entry" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

        <Button
                android:id="@+id/button_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done" />
    </LinearLayout>


</LinearLayout>